--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ngrx/signals": "^17.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "chart.js": "^4.4.7",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
